--- a/app/src/main/res/layout/character_list_fragment.xml
+++ b/app/src/main/res/layout/character_list_fragment.xml
@@ -7,14 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.ListFragment">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MainFragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/character_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:paddingBottom="?attr/listPreferredItemHeight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/character_list_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
