--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="white">#ffffff</color>
     <color name="lightGrey">#d0d0d0</color>
+    <color name="darkGrey">#212121</color>
+    <color name="burntOrange">#F44336</color>
 
     <color name="background">@color/lightGrey</color>
+
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorOnSecondary">@color/white</color>
+    <color name="colorOnError">@color/burntOrange</color>
+    <color name="colorSurface">@color/white</color>
+    <color name="colorOnSurface">@color/darkGrey</color>
+    <color name="colorOnBackground">@color/darkGrey</color>
 </resources>
