--- a/app/src/main/res/layout/character_fragment.xml
+++ b/app/src/main/res/layout/character_fragment.xml
@@ -21,6 +21,7 @@
         tools:text="Rick Sanchez" />
 
     <ImageView
+        android:contentDescription="@string/character_photo_content_description"
         android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -32,5 +33,102 @@
         tools:background="@drawable/ic_launcher_background"
         tools:layout_height="128dp"
         tools:layout_width="128dp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/gender_title"
+                style="@style/DetailTitle"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/gender_title" />
+
+            <TextView
+                android:id="@+id/gender"
+                style="@style/DetailText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Male" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/location_title"
+                style="@style/DetailTitle"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/location_title" />
+
+            <TextView
+                android:id="@+id/location"
+                style="@style/DetailText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Location" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/status_title"
+                style="@style/DetailTitle"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/status_title" />
+
+            <TextView
+                android:id="@+id/status"
+                style="@style/DetailText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Alive" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/origin_title"
+                style="@style/DetailTitle"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/origin_title" />
+
+            <TextView
+                android:id="@+id/origin"
+                style="@style/DetailText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="origin" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
