--- a/app/src/main/res/layout/character_detail_fragment.xml
+++ b/app/src/main/res/layout/character_detail_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:transitionName="root"
-        tools:context=".ui.main.CharacterDetailFragment">
+        tools:context=".ui.main.detail.CharacterDetailFragment">
 
         <TextView
             android:id="@+id/name"
