--- a/app/src/main/res/layout/characters_fragment.xml
+++ b/app/src/main/res/layout/characters_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.CharactersFragment">
+    tools:context=".ui.main.list.CharactersFragment">
 
     <ProgressBar
         android:id="@+id/progress"
