--- a/app/src/main/res/layout/character_detail_fragment.xml
+++ b/app/src/main/res/layout/character_detail_fragment.xml
@@ -150,13 +150,12 @@
 
         <ProgressBar
             android:id="@+id/progress"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="@id/episodes"
-            app:layout_constraintStart_toStartOf="@id/episodes"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/episodes" />
 
         <androidx.recyclerview.widget.RecyclerView
