--- a/app/src/main/res/layout/characters_fragment.xml
+++ b/app/src/main/res/layout/characters_fragment.xml
@@ -7,21 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.list.CharactersFragment">
 
-    <ProgressBar
-        android:id="@+id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/character_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
+        android:padding="8dp"
         android:paddingBottom="?attr/listPreferredItemHeight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
